fix: improve readability

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
 	padding: 0;
 	min-height: 100vh;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 1.5;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -84,7 +87,11 @@ img {
 }
 pre {
 	display: block;
+	margin: 0;
+   padding: 0;
+   border: 0;
 }
+
 section {
 	display: block;
 }
@@ -116,4 +123,13 @@ section {
 }
 .name-project {
 	text-align: left;
+}
+.section-title.first-title {
+	position: relative;
+   padding: 0;
+   margin-bottom: 20px;
+   font-size: 40px;
+   font-weight: 700;
+   letter-spacing: 10px;
+   line-height: 50px;
 }
